--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <!--<h1>Temperature Map</h1> -->
-        {% leaflet_map "main" %}
+        <div>{% leaflet_map "main" %}</div>
+
     </body>
 </html>
