--- a/cgmap/templates/footer.html
+++ b/cgmap/templates/footer.html
@@ -1,6 +1,6 @@
 {# contains the footer with copyright and links to other sites #}
-<div class="footer">
+<footer class="footer">
     <div class="container">
-        <!--<p>Copyright</p>-->
+        <span class="text-muted">Place sticky footer content here.</span>
     </div>
-</div>
+</footer>
