--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -11,7 +11,7 @@
 
 {% block head_css_page %}
     <style>
-        .leaflet-container { height: 100%; }
+        .leaflet-container { height: 100%; overflow: hidden}
     </style>
     <script src="{% static 'cgmap/map.js' %}"></script>
 {% endblock head_css_page %}
@@ -23,5 +23,7 @@
 
 {% block content %}
     <!--<h1>Temperature Map</h1> -->
-    <div>{% leaflet_map "main" %}</div>
+    <div>
+        {% leaflet_map "main" %}
+    </div>
 {% endblock content %}
