--- a/cgmap/templates/footer.html
+++ b/cgmap/templates/footer.html
@@ -1,5 +1,5 @@
 {# contains the footer with copyright and links to other sites #}
-<footer class="footer">
+<footer class="footer" id="footer">
     <div class="container">
         <span class="text-muted">Place sticky footer content here.</span>
     </div>
