--- a/cgmap/templates/header.html
+++ b/cgmap/templates/header.html
@@ -24,7 +24,7 @@
             </form>
         </div>
     </nav>-->
-    <div class="btn-group-vertical" role="group" aria-label="Navbar">
+    <div class="btn-group-vertical" role="group" aria-label="Navbar" id="nav-menu">
         <div class="dropdown">
             <button class="btn btn-secondary" type="button" id="dropdownMenu" data-toggle="dropdown" data-display="static"  aria-haspopup="true" aria-expanded="false">
                 <span class="material-icons" aria-hidden="true">&#xe5d2;</span>
