--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -44,6 +44,39 @@
             </div>
             <div class="temperature-container scale-container"></div>
         </div>
+        <div class="timeline-container">
+            <div class="btn-group btn-group-toggle justify-content-start" id="timeline-nav" data-toggle="buttons">
+                <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="previous" autocomplete="off" checked>&#xe045;
+                </label>
+                <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="start" autocomplete="off">&#xe037;
+                </label>
+                <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="next" autocomplete="off">&#xe044;
+                </label>
+            </div>
+            <div class="timeline">
+                <div class="timeline-group">
+                    <div class="timeline-element" id="1-timeline-element">
+                        <div class="timeline-element-line"></div>
+                        <div class="timeline-element-circle"></div>
+                    </div>
+                    <div class="timeline-element" id="2-timeline-element">
+                        <div class="timeline-element-line"></div>
+                        <div class="timeline-element-circle"></div>
+                    </div>
+                    <div class="timeline-element" id="3-timeline-element">
+                        <div class="timeline-element-line"></div>
+                        <div class="timeline-element-circle"></div>
+                    </div>
+                    <div class="timeline-element" id="4-timeline-element">
+                        <div class="timeline-element-line"></div>
+                        <div class="timeline-element-circle"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock content %}
